--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Klee+One&family=Shizuru&display=swap');
+
+
 // ---------------------
 // Mixin
 // ---------------------
@@ -139,6 +142,7 @@
   color: #fff;
   font-size: clamp(2rem, 2vw, 3rem);
   padding-top: 1rem;
+  font-family: 'Shizuru', cursive;
 }
 
 body {
@@ -193,30 +197,62 @@ body {
 
 /* 人物の写真のスタイル */
 .person-image {
-  position: absolute;
-  bottom: 50%;
-  left: 50%;
+  perspective: 1000px;
+  position: relative;
+  // border-radius: 20px;
+}
+
+.card {
   width: 50vmin;
   height: 50vmin;
-  transform: translate(-50%, -50%);
-  
-  img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 20px;
-      transition: transform 0.3s ease-in-out;
-  }
-
-  &:hover img {
-      transform: scale(1.1);
-  }
+  position: absolute;
+  top: 30px;
+  left: 25%;
+  // transform: translate(-50%, -50%);
+  transition: transform 1s;
+  transform-style: preserve-3d;
+  // & img {
+  //   display: block;
+  //   border-radius: 20px;
+  // }
 }
+
+.card.is-flipped {
+  transform: rotateY(180deg);
+}
+
+.card-face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.card-face.card-face--front {
+  background: url('devita.webp');
+  background-size: cover;
+}
+
+.card-face.card-face--back {
+  background: #000000;
+  color: #ffffff;
+  text-align: center;
+  line-height: 30px;
+  transform: rotateY(180deg);
+  overflow: hidden;
+  text-align: left;
+  font-family: 'Klee One', cursive;
+}
+
+
+
+
 
 /* コンポーネントのスタイル */
 .details-section {
   position: absolute;
-  bottom: 20%;
+  bottom: 10%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
@@ -238,17 +274,26 @@ body {
 /* メディアクエリ: 画面幅が620px以上の場合 */
 @media screen and (min-width: 620px) {
   .person-image {
-      left: 20%;
-      bottom: 50%;
-      transform: translateY(25%);
-      width: 30vmin;
-      height: 30vmin;
+      // left: 20%;
+      // bottom: 50%;
+      // // transform: translateY(25%);
+      // width: 30vmin;
+      // height: 30vmin;
+      .card {
+        width: 30vmin;
+        height: 30vmin;
+        position: absolute;
+        top: 370px;
+        left: 20%;
+        transition: transform 1s;
+        transform-style: preserve-3d;
+      }
   }
 
   .details-section {
       left: 60%;
-      bottom: 50%;
-      transform: translateY(25%);
+      top: 300px;
+      // transform: translateY(25%);
       width: 30vmin;
       height: 30vmin;
   }
@@ -294,13 +339,13 @@ body {
 }
 
 @media screen and (min-width: 620px) {
-  .person-image {
-      left: 20%;
-      bottom: 50%;
-      transform: translateY(25%);
-      width: 30vmin;
-      height: 30vmin;
-  }
+  // .person-image {
+  //     left: 20%;
+  //     bottom: 50%;
+  //     transform: translateY(25%);
+  //     width: 30vmin;
+  //     height: 30vmin;
+  // }
 
   .details-section {
       left: 60%;
@@ -323,4 +368,21 @@ body {
     font-size: 1.5rem;
   }
 
+}
+
+.scroll-text {
+  position: absolute;
+  top: 100%;
+  animation: scroll 40s linear infinite;
+  text-align: center;
+  padding: 10px;
+}
+
+@keyframes scroll {
+  0% {
+    top: 100%;
+  }
+  100% {
+    top: -120%;
+  }
 }
